# open_expense_tracker

./: .gitignore  Home.py  README.md  main.py  process_info.json  pyproject.toml
config/: queries.sql
docs/: flags_suggestions.md
notebooks/: analise_despesas.ipynb
pages/: 1_Painel_de_Controle.py  3_Dados_Processados_(Flags).py  4_Dados_Brutos_(Despesas).py  5_Relatorios_(CSVs).py  7_Relatorio_Detalhado.py
src/: auditor.py  config.py  doc_reporter.py  downloader.py  process_manager.py  reporter.py  summary_manager.py
